--- a/services/templates/services/event.html
+++ b/services/templates/services/event.html
@@ -39,42 +39,49 @@
     End Banner
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start Event
+    Start Gallery
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<section class="event-section event-section-two ptb-120">
-    <div class="container">
-        <div class="row justify-content-center mb-60-none">
-            {% for i in events %}
-            <div class="col-xl-6 col-lg-6 mb-60">
-                <div class="event-item">
-                    <div class="event-thumb">
-                        <img src="{{ i.image.url }}" alt="event">
-                    </div>
-                    <div class="event-content">
-                        <div class="event-meta-area">
-                            <div class="event-post-meta">
-                                <div class="event-location">
-                                    <span><i class="fas fa-map-marker-alt"></i> {{ i.location }}</span>
-                                </div>
-                                <div class="event-date">
-                                    <span><i class="fas fa-clock"></i> {{ i.event_date|date:"h m" }}</span>
+<section class="gallery-section ptb-120">
+    <div class="container-fluid p-0">
+        <div class="row justify-content-center">
+            <div class="col-xl-4 col-lg-8 col-md-6 col-sm-8 text-center">
+                <div class="section-header" data-aos="fade-up" data-aos-duration="1200">
+                    <h2 class="section-title">{% blocktranslate %}SEE OUR <span>GALLERY{% endblocktranslate %}</span></h2>
+                    <p>{% trans 'Pictures of our day to day Fudokan martial arts training and events' %}</p>
+                </div>
+            </div>
+        </div>
+        {% if user.is_authenticated %}
+        <div class="add-content">
+            <a class="" target="_blank" href="{% url 'admin:index' %}services/gallery"><i class="fas fa-plus-circle" style="font-size:80px"></i></a>
+        </div>
+        {% endif %}
+        <div class="gallery-filter-wrapper">
+            <div class="button-group filter-btn-group text-center">
+                <button data-filter=".past">{% trans 'Past events' %}</button>
+                <button data-filter=".future">{% trans 'Future events' %}</button>
+            </div>
+            
+            <div class="grid">
+                {% for i in events %}
+                <div class="grid-item {{ i.categ }}">
+                    <div class="gallery-item">
+                        <div class="gallery-thumb">
+                            <img src="{{ i.image.url }}" alt="{{ i.title }}">
+                            <div class="gallery-overlay">
+                                <div class="gallery-content">
+                                    <h4 class="title">{{ i.text|safe }}</h4>
+                                    <div class="gallery-icon">
+                                        <a class="img-popup" data-rel="lightcase:myCollection" href="{{ i.image.url }}"><img src="#" alt="gallery"></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="event-badge">
-                                <h3 class="badge-title"><span>{{ i.event_date|date:"y" }}</span> <span class="month">{{ i.event_date|date:"d" }}</span></h3>
-                            </div>
-                        </div>
-                        <h3 class="title"><a href="{% url 'event-details' i.slug %}">{{ i.title|safe }}</a></h3>
-                        <p>{{ i.text|safe }}</p>
-                        <div class="event-btn">
-                            <a href="{% url 'event-details' i.slug %}">{% trans 'Read More' %} <i class="fas fa-arrow-right ml-2"></i></a>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
         <!-- <nav>
             <ul class="pagination justify-content-center">
@@ -94,6 +101,6 @@
     </div>
 </section>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End Event
+    End Gallery
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 {% endblock %}
