--- a/services/templates/services/trainers.html
+++ b/services/templates/services/trainers.html
@@ -199,7 +199,7 @@
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Overview
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<section class="overview-section ptb-120">
+<!-- <section class="overview-section ptb-120">
     <div class="container">
         <div class="row justify-content-center mb-30-none">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
@@ -253,7 +253,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     End Overview
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
