Create calendar for training hours

--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -160,7 +160,7 @@
 										<li><a class="text-uppercase" href="{% url 'media' %}">{% trans 'Media' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'events' %}">{% trans 'Events' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'pricing' %}">{% trans 'Pricing plan' %}</a></li>
-                                        <li><a class="text-uppercase" href="{% url 'coming-soon' %}">{% trans 'Calendar' %}</a></li>
+                                        <li><a class="text-uppercase" href="{% url 'training-schedule' %}">{% trans 'Training calendar' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'faqs' %}">FAQ</a></li>
                                     </ul>
                                 </li>
