--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -159,6 +159,8 @@
 										<li><a class="text-uppercase" href="{% url 'gallery' %}">{% trans 'Gallery' %}</a></li>
 										<li><a class="text-uppercase" href="{% url 'media' %}">{% trans 'Media' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'events' %}">{% trans 'Events' %}</a></li>
+                                        <li><a class="text-uppercase" href="{% url 'news' %}">{% trans 'News' %}</a></li>
+
                                         <li><a class="text-uppercase" href="{% url 'pricing' %}">{% trans 'Pricing plan' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'training-schedule' %}">{% trans 'Training calendar' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'faqs' %}">FAQ</a></li>
@@ -172,7 +174,7 @@
                                     <a class="text-uppercase" href="{% url 'trainers' %}">{% trans 'Trainers' %}</a>
                                 </li>
                                 <li class="">
-                                    <a class="text-uppercase" href="{% url 'news' %}">{% trans 'News' %}</a>
+                                    <a class="text-uppercase" href="{% url 'donate' %}">{% trans 'Donate' %}</a>
                                 </li>
 								<li class="menu_has_children">
 									{% get_available_languages as LANGUAGES %}
