--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -174,7 +174,7 @@
                                     <a class="text-uppercase" href="{% url 'trainers' %}">{% trans 'Trainers' %}</a>
                                 </li>
                                 <li class="">
-                                    <a class="text-uppercase" href="{% url 'donate' %}">{% trans 'Donate' %}</a>
+                                    <a class="text-uppercase" href="{% url 'coming-soon' %}">{% trans 'Donate' %}</a>
                                 </li>
 								<li class="menu_has_children">
 									{% get_available_languages as LANGUAGES %}
