--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -231,10 +231,10 @@
 	            </div>
 	            <div class="col-xl-3 col-lg-3 col-md-6 mb-30">
 	                <div class="footer-widget">
-	                    <h4 class="title">{% trans 'Program' %}</h4>
+	                    <h4 class="title">{% trans 'Contact Program' %}</h4>
 	                    <ul class="footer-list">
-							<li style="border-top:1px solid white;">{% trans 'Monday' %} : </li>
-							<ul class="footer-list ml-3">
+							<li style="border-top:1px solid white;">{% trans 'Monday' %} - {% trans 'Friday' %}: 9:00 A.M. - 4:00 P.M.</li>
+							<!--<ul class="footer-list ml-3">
 								<li>5:00 a.m. - 6:00 p.m. ({% trans 'Beginners, +10 years old' %})</li>
 								<li>6:00 a.m. - 7:00 p.m. ({% trans 'Intermediate, +10 years old' %})</li>
 								<li>7:00 a.m. - 8:00 p.m. ({% trans '+16 years old' %})</li>
@@ -259,7 +259,7 @@
 							<ul class="footer-list ml-3">
 								<li>5:00 a.m. - 6:00 p.m. ({% trans 'Club Sportiv Honterus' %})</li>
 								<li>6:00 a.m. - 7:00 p.m. ({% trans 'Advanced' %})</li>
-							</ul>
+							</ul> -->
 							
 	                    </ul>
 	                </div>
