Create calendar for training hours

--- a/services/templates/services/training.html
+++ b/services/templates/services/training.html
@@ -71,8 +71,8 @@
                                 <!-- <img src="{{ i.icon.url }}" alt="icon"> -->
                             <!-- </div> -->
                         </div>
-                        <h3 class="title"><a href="#">{{ i.title|upper }}</a></h3>
-                        <p>{{ i.text|safe|lower|capfirst }}.</p>
+                        <h3 class="title"><a href="#">{{ i.name|capfirst }}</a></h3>
+                        <p>{{ i.text|safe|capfirst }}.</p>
                         <div class="training-footer-area">
                             <div class="training-price">
                             </div>
