Fixed teachings in home page, fixed testimonials in ome page, added form to add testimonials, created results view

--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -159,8 +159,8 @@
 										<li><a class="text-uppercase" href="{% url 'gallery' %}">{% trans 'Gallery' %}</a></li>
 										<li><a class="text-uppercase" href="{% url 'media' %}">{% trans 'Media' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'events' %}">{% trans 'Events' %}</a></li>
+										<li><a class="text-uppercase" href="{% url 'coming-soon' %}">{% trans 'Results' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'news' %}">{% trans 'News' %}</a></li>
-
                                         <li><a class="text-uppercase" href="{% url 'pricing' %}">{% trans 'Pricing plan' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'training-schedule' %}">{% trans 'Training calendar' %}</a></li>
                                         <li><a class="text-uppercase" href="{% url 'faqs' %}">FAQ</a></li>
