--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -511,111 +511,11 @@
 
 
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-		Start Client
+		Start Testimonials
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<section class="client-section client-section-two ptb-120 bg-overlay-black bg_img" data-background="{% static 'images/backgrounds/bg-7.png' %}">
-		<div class="container">
-				<div class="row">
-						<div class="col-xl-12">
-								<div class="section-header-wrapper">
-										<div class="section-header white" data-aos="fade-right" data-aos-duration="1200">
-												<h2 class="section-title">{% blocktranslate %}OUR <span></span> TESTIMONIALS{% endblocktranslate %}</h2>
-												<p>{% trans 'Energyfit Karate Brasov is the only Fudokan martial arts school in Brasov, a karate style that teaches modesty, focus and fighting for true human values. Our school has one of the most innovative and child friendly training programs you can find' %}.</p>
-										</div>
-										<div class="slider-nav-area" data-aos="fade-left" data-aos-duration="1200">
-												<div class="slider-prev">
-														<i class="fas fa-chevron-left"></i>
-												</div>
-												<div class="slider-next">
-														<i class="fas fa-chevron-right"></i>
-												</div>
-										</div>
-								</div>
-						</div>
-				</div>
-				<div class="client-area">
-						<div class="row justify-content-center align-items-end mb-30-none">
-								<div class="col-xl-8 col-lg-8 col-md-6 mb-30">
-										<div class="client-slider" data-aos="fade-right" data-aos-duration="1200">
-												<div class="swiper-wrapper">
-														<div class="swiper-slide">
-																<div class="client-item">
-																		<div class="client-header">
-																				<div class="client-quote">
-																						<img src="{% static 'images/client/quote.png' %}" alt="client">
-																				</div>
-																				<div class="client-thumb">
-																						<img src="{% static 'images/client/client-1.png' %}" alt="client">
-																				</div>
-																		</div>
-																		<div class="client-content">
-																				<p>{% trans 'Energyfit Karate Brasov is the only Fudokan martial arts school in Brasov, a karate style that teaches modesty, focus and fighting for true human values. Our school has one of the most innovative and child friendly training programs you can find' %}
-																		</div>
-																		<div class="client-footer">
-																				<div class="client-footer-left">
-																						<h4 class="title"><a href="#0">Ioana Ioana</a></h4>
-																						<span class="sub-title">Women's Trainner</span>
-																				</div>
-																				<div class="client-footer-right">
-																						<span class="ratings">
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star active"></i>
-																						</span>
-																				</div>
-																		</div>
-																</div>
-														</div>
-														<div class="swiper-slide">
-																<div class="client-item">
-																		<div class="client-header">
-																				<div class="client-quote">
-																						<img src="{% static 'images/client/quote.png' %}" alt="client">
-																				</div>
-																				<div class="client-thumb">
-																						<img src="{% static 'images/client/client-2.png' %}" alt="client">
-																				</div>
-																		</div>
-																		<div class="client-content">
-                                      <p>{% trans 'Energyfit Karate Brasov is the only Fudokan martial arts school in Brasov, a karate style that teaches modesty, focus and fighting for true human values. Our school has one of the most innovative and child friendly training programs you can find' %}
-
-																		</div>
-																		<div class="client-footer">
-																				<div class="client-footer-left">
-																						<h4 class="title"><a href="#0">Ion Ion</a></h4>
-																						<span class="sub-title">Fudokan Trainee</span>
-																				</div>
-																				<div class="client-footer-right">
-																						<span class="ratings">
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star"></i>
-																								<i class="fas fa-star active"></i>
-																						</span>
-																				</div>
-																		</div>
-																</div>
-														</div>
-												</div>
-										</div>
-								</div>
-								<div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-										<div class="client-right-thumb" data-aos="fade-left" data-aos-duration="1200">
-												<img src="{% static 'images/logo/logo-energyfit-cerc.png' %}" alt="client">
-												<div class="client-thumb-overlay">
-														<h4 class="title"></h4>
-												</div>
-										</div>
-								</div>
-						</div>
-				</div>
-		</div>
-</section>
+{% include 'includes/testimonials.html' %}
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-		End Client
+		End Testimonials
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 
