Fixed teachings in home page, fixed testimonials in ome page, added form to add testimonials, created results view

--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -414,7 +414,7 @@
 								<div class="section-header-wrapper">
 										<div class="section-header white" data-aos="fade-right" data-aos-duration="1200">
 												<h2 class="section-title">{% blocktranslate %}OUR <span>SENSEIS</span>{% endblocktranslate %}</h2>
-												<p>{% trans 'Introduction...' %}.</p>
+												<p>{% trans 'Our trainers are armed with patiences and kindness, two ingredientes that make students feel part of a family' %}.</p>
 										</div>
 										<div class="all-btn text-center" data-aos="fade-left" data-aos-duration="1200">
 												<a href="{% url 'trainers' %}" class="custom-btn">{% trans 'More' %}</a>
