Fixed teachings in home page, fixed testimonials in ome page, added form to add testimonials, created results view

--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -492,7 +492,7 @@
 																		<span>Event</span>
 																</div>
 																<div class="event-date">
-																		<span>{{ i.event_date|date:"d - m - y" }}</span>
+																		<span>{{ i.event_date|date:"d - M - y" }}</span>
 																</div>
 														</div>
 														<h3 class="title"><a href="{% url 'event-details' i.slug %}">{{ i.title|safe }}</a></h3>
