Fixed teachings in home page, fixed testimonials in ome page, added form to add testimonials, created results view

--- a/services/templates/includes/testimonials.html
+++ b/services/templates/includes/testimonials.html
@@ -36,7 +36,7 @@
                                                                                     <img src="{% static 'images/client/quote.png' %}" alt="client">
                                                                             </div>
                                                                             <div class="client-thumb">
-                                                                                    <img src="{% static 'images/client/client-1.png' %}" alt="client">
+                                                                                    <img src="{% static 'images/icon/icon-29.png' %}" alt="client">
                                                                             </div>
                                                                     </div>
                                                                     <div class="client-content">
