Fixed teachings in home page, fixed testimonials in ome page, added form to add testimonials, created results view

--- a/services/templates/services/contact.html
+++ b/services/templates/services/contact.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="contact-content">
                         <h4 class="title">{% trans 'OFFICE ADDRESS' %}</h4>
-                        <p>Str. Poarta Schei 39, Brașov 500020, Romania <br> <a href="https://goo.gl/maps/eUpdbgLurJBWbRe1A" target="_blank">{% trans 'view on map' %}</a> </p>
+                        <p>Str. Poarta Schei 39, Brașov 500020, Romania <br> <a href="https://maps.app.goo.gl/2yniWbASA6NtmH5S8" target="_blank">{% trans 'view on map' %}</a> </p>
                     </div>
                 </div>
             </div>
