--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -257,7 +257,7 @@
 												<div class="feature-item mb-30" data-aos="zoom-in" data-aos-duration="1200">
 														<div class="feature-icon-area">
 																<div class="feature-icon">
-																		<img src="{% static 'images/icon/icon-11.png' %}" alt="icon">
+																		<img src="{% static 'images/icon/icon-31.png' %}" alt="icon">
 																</div>
 														</div>
 														<div class="feature-content">
@@ -307,7 +307,7 @@
 												<div class="feature-item mb-30" data-aos="zoom-in" data-aos-duration="1200">
 														<div class="feature-icon-area">
 																<div class="feature-icon">
-																		<img src="{% static 'images/icon/icon-13.png' %}" alt="icon">
+																		<img src="{% static 'images/icon/icon-9.png' %}" alt="icon">
 																</div>
 														</div>
 														<div class="feature-content">
@@ -364,7 +364,7 @@
 				<div class="row justify-content-center">
 						<div class="col-xl-7 col-lg-8 text-center">
 								<div class="section-header" data-aos="fade-up" data-aos-duration="1200">
-										<h2 class="section-title">{% blocktranslate %}MORE ABOUT WHAT<span> YOU</span> WILL LEARN HERE{% endblocktranslate %}</h2>
+										<h2 class="section-title">{% blocktranslate %}MORE ABOUT WHAT <span>YOU</span> WILL LEARN HERE{% endblocktranslate %}</h2>
 										<p></p>
 								</div>
 						</div>
@@ -413,7 +413,7 @@
 						<div class="col-xl-12">
 								<div class="section-header-wrapper">
 										<div class="section-header white" data-aos="fade-right" data-aos-duration="1200">
-												<h2 class="section-title">{% blocktranslate %}OUR <span>SENSEIS</span>{% endblocktranslate %}</h2>
+												<h2 class="section-title">{% blocktranslate %}OUR <span>TRAINERS</span>{% endblocktranslate %}</h2>
 												<p>{% trans 'Our trainers are armed with patiences and kindness, two ingredientes that make students feel part of a family' %}.</p>
 										</div>
 										<div class="all-btn text-center" data-aos="fade-left" data-aos-duration="1200">
