--- a/services/templates/services/subscription_conf.html
+++ b/services/templates/services/subscription_conf.html
@@ -15,7 +15,7 @@
 	</div>
 	{% endif %}
     <div class="section-logo-text">
-        <span class="title">ENERGYFIT KARATE BRASOV</span>
+        <span class="title">ENERGYFIT</span>
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center align-items-end mb-30-none">
