--- a/services/templates/services/training.html
+++ b/services/templates/services/training.html
@@ -72,7 +72,7 @@
                             <!-- </div> -->
                         </div>
                         <h3 class="title"><a href="#">{{ i.name|capfirst }}</a></h3>
-                        <p>{{ i.text|safe|capfirst }}.</p>
+                        <p>{{ i.text|safe|capfirst }}</p>
                         <div class="training-footer-area">
                             <div class="training-price">
                             </div>
@@ -195,16 +195,19 @@
             </div>
             <div class="col-xl-6 col-lg-6 mb-30" data-aos="fade-left" data-aos-duration="1200">
                 <div class="account-widget-form-area bg_img" data-background="{% static 'images/backgrounds/bg-7.png' %}">
-                    <form class="account-widget-form">
+                    <form class="account-widget-form" method="POST">
+                        {% csrf_token %}
                         <div class="row justify-content-center mb-20-none">
                             <div class="col-xl-12 form-group">
-                                <input type="text" class="form--control" name="name" placeholder="Your Name*">
+                                {{ messageform.author }}
                             </div>
                             <div class="col-xl-12 form-group">
-                                <input type="email" class="form--control" name="email" placeholder="Your Email*">
+                                <!-- <input type="email" class="form--control" name="email" placeholder="Your Email*"> -->
+                                {{ messageform.email }}
                             </div>
                             <div class="col-xl-12 form-group">
-                                <input type="number" class="form--control" name="phone" placeholder="Your Phone*">
+                                <!-- <input type="number" class="form--control" name="phone" placeholder="Your Phone*"> -->
+                                {{ messageform.phone }}
                             </div>
                             <div class="col-xl-12 form-group">
                                 <div class="account-widget-select">
@@ -217,8 +220,14 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 form-group">
-                                <textarea class="form--control" name="message" placeholder="Your Message*"></textarea>
+                                <!-- <textarea class="form--control" name="message" placeholder="Your Message*"></textarea> -->
+                                {{ messageform.text }}
                             </div>
+                            <div class="col-xl-12 form-group">
+                                <p class="text-muted">{% trans "Please fill in the captcha field below, to show you are human" %}</p>
+                                {{ form.as_p }}
+                            </div>
+                            
                             <div class="col-xl-12 form-group">
                                 <button type="submit" class="btn--base">{% trans 'Send' %} <i class="fas fa-arrow-right ml-2"></i></button>
                             </div>
@@ -281,7 +290,7 @@
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-30">
                                         <div class="faq-inner-thumb">
-                                            <img src="{% static 'images/training/training-4.webp' %}" alt="faq">
+                                            <img src="{% static 'images/training/training-5.webp' %}" alt="faq">
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-30">
