--- a/services/templates/services/contact.html
+++ b/services/templates/services/contact.html
@@ -155,22 +155,41 @@
             </div>
             <div class="col-xl-6 col-lg-6 mb-60">
                 <div class="account-widget-form-area">
-                    <form class="account-widget-form">
-                        <div class="row justify-content-center mb-25-none">
+                    <form class="account-widget-form" method="POST">
+                        {% csrf_token %}
+                        <div class="row justify-content-center mb-20-none">
                             <div class="col-xl-12 form-group">
-                                <input type="text" class="form--control" name="author" placeholder="{% trans 'Your Name' %}*">
+                                {{ messageform.author }}
                             </div>
                             <div class="col-xl-12 form-group">
-                                <input type="email" class="form--control" name="email" placeholder="{% trans 'Your Email' %}*">
+                                <!-- <input type="email" class="form--control" name="email" placeholder="Your Email*"> -->
+                                {{ messageform.email }}
                             </div>
                             <div class="col-xl-12 form-group">
-                                <input type="text" class="form--control" name="phone"  placeholder="{% trans 'Your Phone' %}*">
+                                <!-- <input type="number" class="form--control" name="phone" placeholder="Your Phone*"> -->
+                                {{ messageform.phone }}
                             </div>
                             <div class="col-xl-12 form-group">
-                                <textarea class="form--control" name="message" placeholder="{% trans 'Your Message' %}*"></textarea>
+                                <div class="account-widget-select">
+                                    <select class="form--control">
+                                      <option value="1">{% trans 'Choose' %}</option>
+                                      {% for t in servicecats %}
+                                      <option name="training_type" value="{{ t.slug }}">{{ t.name }}</option>
+                                      {% endfor %}
+                                    </select>
+                                </div>
                             </div>
                             <div class="col-xl-12 form-group">
-                                <button type="submit" class="btn--base">{% trans 'Send Now' %} <i class="fas fa-arrow-right ml-2"></i></button>
+                                <!-- <textarea class="form--control" name="message" placeholder="Your Message*"></textarea> -->
+                                {{ messageform.text }}
+                            </div>
+                            <div class="col-xl-12 form-group">
+                                <p class="text-muted">{% trans "Please fill in the captcha field below, to show you are human" %}</p>
+                                {{ form.as_p }}
+                            </div>
+                            
+                            <div class="col-xl-12 form-group">
+                                <button type="submit" class="btn--base">{% trans 'Send' %} <i class="fas fa-arrow-right ml-2"></i></button>
                             </div>
                         </div>
                     </form>
