--- a/services/templates/services/trainers.html
+++ b/services/templates/services/trainers.html
@@ -58,8 +58,9 @@
 						<div class="col-xl-12">
 								<div class="section-header-wrapper">
 										<div class="section-header white" data-aos="fade-right" data-aos-duration="1200">
-												<h2 class="section-title">{% blocktranslate %}OUR <span>SENSEIS</span>{% endblocktranslate %}</h2>
-												<p>{% trans 'Introduction...' %}.</p>
+												<h2 class="section-title">{% blocktranslate %}OUR <span>TRAINERS</span>{% endblocktranslate %}</h2>
+                                                <p>{% trans 'Our trainers are armed with patiences and kindness, two ingredientes that make students feel part of a family' %}.</p>
+
 										</div>
 								</div>
 						</div>
