Updated contact form

--- a/services/templates/services/about.html
+++ b/services/templates/services/about.html
@@ -116,7 +116,7 @@
                             <img src="{% static 'images/icon/icon-22.png' %}" alt="icon">
                         </div>
                         <div class="about-content">
-                            <h4 class="title">{% trans 'Performance career guidance' %}</h4>
+                            <h4 class='title'>{% trans 'Performance career guidance' %}</h4>
                             <p>{% trans 'For those need professional counseling into Fudokan we are always here to help' %}</p>
                         </div>
                     </div>
