Fixed add review page

--- a/services/templates/includes/testimonials.html
+++ b/services/templates/includes/testimonials.html
@@ -3,7 +3,7 @@
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 		Start Testimonials
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<section class="client-section client-section-two ptb-120 bg-overlay-black bg_img" data-background="{% static 'images/backgrounds/bg-7.png' %}">
+<section class="client-section client-section-two ptb-120 bg-overlay-black bg_img" id="testimonial" data-background="{% static 'images/backgrounds/bg-7.png' %}">
     <div class="container">
             <div class="row">
                     <div class="col-xl-12">
