Fixed about translation

--- a/services/templates/services/about.html
+++ b/services/templates/services/about.html
@@ -72,7 +72,7 @@
                         <ul class="about-list mt-4">
                             <li>{% trans 'Over 50 athletes' %}</li>
                             <li>{% trans 'Four groups' %}</li>
-                            <li>{% trans 'Two sensei - Petre Cătălin - 3 dan, Czoguly Karoly - 1 dan' %}</li>
+                            <li>{% trans 'Two trainers - Sensei Petre Cătălin - 3 dan, Czoguly Karoly - 1 dan' %}</li>
                             <li>{% trans 'Four Fudokan licensed referees' %}</li>
                             <li>{% trans 'An official partner - Patronage of Family Doctors Brasov' %}</li>
                             <li>{% trans 'Two media partners - Info1Tv, Radio Romania Brasov FM' %}</li>
